<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.dmstplus</groupId>
    <artifactId>prog_II_project</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>DMST+ Erasmus Finder</name>

    <properties>
        <!-- Ορισμός της έκδοσης Java -->
        <java.version>23</java.version>
        <!-- Ορισμός της έκδοσης JavaFX -->
        <javafx.version>23.0.1</javafx.version>
    </properties>

    <dependencies>
        <!-- JUnit για δοκιμές -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>

        <!-- Εξαρτήσεις JavaFX -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>openjfx</id>
            <url>https://maven.openjfx.io</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <!-- Maven Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <!-- JavaFX Maven Plugin -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>com.dmstplus.App</mainClass> <!-- Η κύρια κλάση -->
                    <jvmArgs>
                        --module-path C:\Users\dim\JAVA\prog_II_project\Maven_Structure_dmstplus\.vscode\javaFX\openjfx-23.0.1_windows-x64_bin-sdk\javafx-sdk-23.0.1\lib --add-modules javafx.controls,javafx.fxml
                    </jvmArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
